# cloud-sre-gym

./: .dockerignore  Dockerfile  Modelfile  README.md  SUBMISSION.md  fix_tables.py  generate_dataset.py  hf_space.env.example  inference.py  openenv.yaml  pre_submit_check.sh  requirements.txt  run_all_tasks_ollama.sh  sre_finetuning_data.jsonl  test_safely.py  update_readme.py  validate-submission.sh
cloudscaler2/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
cloudscaler2/server/: Dockerfile  __init__.py  app.py  cloudscaler2_environment.py
cloudscalerl/: Generator.py  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
cloudscalerl/server/: Dockerfile  __init__.py  app.py  cloudscalerl_env.py  cloudscalerl_environment.py  requirements.txt
cloudscalerl/tasks/: Task1hpa.py  Task2cost.py  Task3incident.py
src/: env.py  grader.py  models.py  simulation.py  tools.py
src/baseline/: openai_agent.py
