[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudscalerl"
version = "0.1.0"
description = "Kubernetes-inspired cloud autoscaling RL environment with LLM reasoning agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "CloudScaleRL Team" }
]
keywords = ["reinforcement-learning", "kubernetes", "autoscaling", "llm", "cloud"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "openenv-core",
    "openai>=1.0",
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "numpy>=1.26",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
    "httpx>=0.27",
]

[project.scripts]
cloudscalerl = "cloudscalerl.client:main"

[tool.hatch.build.targets.wheel]
packages = ["cloudscalerl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]